# MIPT-Cpp-Course

./: README.md
.github/workflows/: cache-ci.yml  matrix-ci.yml  tree-ci.yml  triangles-ci.yml
hw1_Cache/: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  gen_data.py  pyproject.toml
hw1_Cache/include/: belady_cache.hpp  lirs_cache.hpp  utils.hpp
hw1_Cache/src/: main.cpp  utils.cpp
hw1_Cache/tests/: CMakeLists.txt  test_belady_cache.cpp  test_lirs_cache.cpp
hw2_Triangles/: .gitignore  CMakeLists.txt  README.md  conanfile.py  triangle_gen_no_intersection.py  triangle_generator.py
hw2_Triangles/modules/: config.cppm  line.cppm  line_segment.cppm  plane.cppm  point.cppm  tri_intersection.cppm  triangle.cppm  triangle_intersection.cppm  vector.cppm
hw2_Triangles/modules/render/: camera.cppm  config.cppm  exceptions.cppm  fragment_shader.glsl  helpers.cppm  mesh.cppm  render.cppm  scene.cppm  shader_program.cppm  shader_source.cppm.in  triangle_intersection_view.cppm  trivis.cppm  vertex_shader.glsl  window.cppm
hw2_Triangles/src/: main.cpp
hw2_Triangles/test/: CMakeLists.txt  compare_outputs.py  test_line_intersection_3d.cpp  test_line_segment_intersection_2d.cpp  test_line_segment_intersection_3d.cpp  test_triangle_intersection.cpp  test_triangle_intersection_2d.cpp  test_triangle_intersection_3d.cpp
hw2_Triangles/test/data/: 11.in  3.in  4.in  5.in
hw3_Tree/: .gitignore  CMakeLists.txt  README.md  conanfile.py  tree.dot
hw3_Tree/benchmark/: CMakeLists.txt  benchmark.cpp
hw3_Tree/include/: range_query.hpp  tree.hpp
hw3_Tree/src/: main.cpp
hw3_Tree/test/: CMakeLists.txt  test_tree.cpp  test_tree_iterator.cpp
hw4_Matrix/: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
hw4_Matrix/script/: generate_tests.py  matrix_gen.py  test_det_e2e.py
hw4_Matrix/src/: config.cxxm  hello.cxxm  linal.cxxm  main.cxx  matrix.cxxm  vector.cxxm
hw4_Matrix/test/: CMakeLists.txt  test_matrix.cxx  test_vector.cxx
hw4_Matrix/test/data/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  4.in  5.in  6.in  7.in  8.in  9.in
hw5_ParaCL/: CMakeLists.txt  a.out  conanfile.py  lexer.l  parser.y
hw6_BitonicSort/: CMakeLists.txt  README.md  benchmark.py  res_bench1.md  res_bench2.md
hw6_BitonicSort/cmake/: kernel_source.hxx.in
hw6_BitonicSort/include/: config.hxx  helpers.hxx  mydef.hxx  ocl_bitonic_sort.hxx
hw6_BitonicSort/src/: config.cxx  fast_bitonic_sort.cl  main.cxx  ocl_bitonic_sort.cxx  simple_bitonic_sort.cl
hw6_BitonicSort/test/: CMakeLists.txt  test_e2e.py  test_helpers.cxx  test_ocl_bitonic_sort.cxx
hw6_BitonicSort/test/data/: 1.in  1.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  17.out  18.in  18.out  19.in  19.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
